--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
-<div class="container">
-  <h1>لعبة تخمين الرقم</h1>
-  <p>اختر رقمًا بين 1 و 100 وحاول تخمين الرقم السري!</p>
-  <input type="number" id="guessInput" placeholder="أدخل رقمك هنا" />
-  <button onclick="checkGuess()">تخمين</button>
-  <p id="message"></p>
-</div>
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>لعبة تخمين الرقم</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>تخمين الرقم</h1>
+    <input type="number" id="guess" placeholder="أدخل رقمًا">
+    <button id="guessButton">تخمين</button>
+    <p id="result"></p>
+    
+    <script src="script.js"></script>
+</body>
+</html>
