--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>لعبة تخمين الرقم</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- تأكد من أن لديك ملف CSS -->
 </head>
 <body>
     <h1>تخمين الرقم</h1>
@@ -12,6 +12,6 @@
     <button id="guessButton">تخمين</button>
     <p id="result"></p>
     
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- تأكد من أن لديك ملف JavaScript -->
 </body>
 </html>
