--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>تخمين الرقم!</h1>
-        <p>أنت في حالة تحدي! يجب عليك تخمين الرقم بين 1 و 100.</p>
-        <input type="number" id="guess" placeholder="أدخل رقمًا" min="1" max="100">
-        <button id="guessButton">تخمين</button>
-        <p id="result"></p>
-        <button id="restartButton" style="display: none;">إعادة البدء</button>
-    </div>
+    <h1>تخمين الرقم!</h1>
+    <p>خمن رقمًا بين 1 و 100:</p>
+    <input type="number" id="guess" />
+    <button id="submitGuess">تخمين</button>
+    <p id="result"></p>
+
+    <audio id="successSound" src="victory.mp3"></audio>
+    <audio id="failureSound" src="failure.mp3"></audio>
+
     <script src="script.js"></script>
 </body>
 </html>
