--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>تخمين الرقم!</h1>
-    <p>خمن رقمًا بين 1 و 100:</p>
-    <input type="number" id="guess" />
-    <button id="submitGuess">تخمين</button>
-    <p id="result"></p>
+    <div class="container">
+        <h1>تخمين الرقم!</h1>
+        <p>خمن رقمًا بين 1 و 100:</p>
+        <input type="number" id="guess" />
+        <button id="submitGuess">تخمين</button>
+        <p id="result"></p>
 
-    <audio id="successSound" src="victory.mp3"></audio>
-    <audio id="failureSound" src="failure.mp3"></audio>
+        <audio id="successSound" src="victory.mp3"></audio>
+        <audio id="failureSound" src="failure.mp3"></audio>
+    </div>
 
     <script src="script.js"></script>
 </body>
