--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <div class="container">
         <h1>تخمين الرقم!</h1>
         <p>خمن رقمًا بين 1 و 100:</p>
-        <input type="number" id="guess" />
+        <input type="number" id="guess" placeholder="أدخل تخمينك هنا" />
         <button id="submitGuess">تخمين</button>
         <p id="result"></p>
 
+        <!-- هنا يتم تضمين ملفات الصوت -->
         <audio id="successSound" src="victory.mp3"></audio>
         <audio id="failureSound" src="failure.mp3"></audio>
     </div>
