--- a/index.html
+++ b/index.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>لعبة تخمين الرقم</title>
-    <link rel="stylesheet" href="style.css">
+    <title>لعبة تخمين الأرقام</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>تخمين الرقم!</h1>
-        <p>خمن رقمًا بين 1 و 100:</p>
-        <input type="number" id="guess" placeholder="أدخل تخمينك هنا" />
-        <button id="submitGuess">تخمين</button>
+        <h1>لعبة تخمين الأرقام</h1>
+        <p id="stage-description">الوصول إلى المرحلة الأولى: جدار البداية</p>
+        <p id="hint">التلميح: الرقم هو نصف عدد أصابع اليد الواحدة.</p>
+        <p>خمن رقمًا بين <span id="range-min">1</span> و <span id="range-max">10</span>:</p>
+        <input type="number" id="guess-input">
+        <button onclick="checkGuess()">تخمين</button>
         <p id="result"></p>
-
-        <!-- هنا يتم تضمين ملفات الصوت -->
-        <audio id="successSound" src="victory.mp3"></audio>
-        <audio id="failureSound" src="failure.mp3"></audio>
     </div>
-
-    <script src="script.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
